overlapping correction

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -33,7 +33,7 @@
 
     .mobile-header span {
         margin-top: 15px;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     main h1 {
